--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,12 @@ captures/
 .idea/navEditor.xml
 
 # Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
+keystore.properties
+
+# Releases directory (APK files should be tracked)
+# releases/*.apk
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
